--- a/Singularity.2.1
+++ b/Singularity.2.1
@@ -28,8 +28,8 @@ Version 2.1
 
 %runscript
 if [ $# -eq 0 ]; then
-  echo -e 'This Singularity image cannot provide a single entrypoint. Please use `<image-name.simg> <CMD>` or `singularity exec <image-name.simg> <CMD>`, where <CMD> is one of the  following:\n'
-  exec ls -l /opt/stacks-2.0/bin | awk '{print $NF}'
+  /bin/echo -e "This Singularity image cannot provide a single entrypoint. Please use \"$SINGULARITY_NAME <cmd>\" or \"singularity exec $SINGULARITY_NAME <cmd>\", where <cmd> is one of the following:\n"
+  exec ls /opt/stacks-2.1/bin
 else
   exec "$@"
 fi
