--- a/Singularity.2.1
+++ b/Singularity.2.1
@@ -1,35 +1,31 @@
 Bootstrap: docker
-From: fedora:27
+From: fedora:29
 
 %labels
 Maintainer tejas.sevak@plantandfood.co.nz
 Version 2.1
 
-%environment
- PATH=/opt/stacks-2.1/bin:$PATH
- export PATH
-
 %post
   ## Download build prerequisites
-  dnf install gcc gcc-c++ wget zlib-devel make perl libgomp -y
+  dnf -y install gcc gcc-c++ libgomp make perl wget zlib-devel
 
   wget http://catchenlab.life.illinois.edu/stacks/source/stacks-2.1.tar.gz
 
   tar -xvf stacks-2.1.tar.gz
   cd stacks-2.1
-  ./configure --prefix=/opt/stacks-2.1
+  ./configure
   make
   make install
   
   ## Cleanup
-  dnf remove gcc gcc-c++ wget zlib-devel -y
+  dnf -y remove wget zlib-devel
   dnf -y clean all
-  rm -rf /stacks-2.1.tar.gz
+  rm -rf /stacks*
 
 %runscript
 if [ $# -eq 0 ]; then
   /bin/echo -e "This Singularity image cannot provide a single entrypoint. Please use \"$SINGULARITY_NAME <cmd>\" or \"singularity exec $SINGULARITY_NAME <cmd>\", where <cmd> is one of the following:\n"
-  exec ls /opt/stacks-2.1/bin
+  exec ls /usr/local/bin
 else
   exec "$@"
 fi
